--- a/style.css
+++ b/style.css
@@ -6,12 +6,20 @@
 
 .menu {
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
-  background: black;
+  background: #1a2f0d;
   color: white;
   width: 100%;
-  min-height: 30px;
+  min-height: 50px;
+  padding-left: 20px
+}
+
+.logo {
+  width: 30px;
+  height: 30px;
+  margin-right: 10px;
+  filter: invert(1);
 }
 
 .container {
@@ -43,9 +51,9 @@
 }
 
 .footer {
-  background: #333;
+  background: #1a2f0d;
   color: white;
-  padding: 30px 0;
+  padding: 15px 0;
   margin-top: 50px;
 }
 
